Add PayPal funding path and separate it from support plans

--- a/site/contact.html
+++ b/site/contact.html
@@ -82,6 +82,25 @@
         </div>
       </section>
 
+      <section class="section">
+        <div class="card">
+          <h3 data-i18n="funding_contact_title">Support the Roadmap</h3>
+          <p data-i18n="funding_contact_body">
+            You can support ongoing development directly via PayPal, or choose a professional support package for business-critical deployments.
+          </p>
+          <div class="hero-cta">
+            <a
+              class="btn primary"
+              href="https://www.paypal.com/donate/?hosted_button_id=REPLACE_WITH_YOUR_BUTTON_ID"
+              target="_blank"
+              rel="noopener"
+              data-i18n="funding_paypal_cta"
+            >Support via PayPal</a>
+            <a class="btn" href="mailto:gashi@pro-business.ch" data-i18n="funding_contact_cta">Request support plan</a>
+          </div>
+        </div>
+      </section>
+
       <section class="section" id="gallery">
         <div class="section-title">
           <span data-i18n="gallery_kicker">Gallery</span>
