--- a/site/index.html
+++ b/site/index.html
@@ -150,6 +150,13 @@
           <div class="hero-cta">
             <a class="btn primary" href="licensing.html">Review licensing model</a>
             <a class="btn" href="docs/SLA.md">Read SLA</a>
+            <a
+              class="btn"
+              href="https://www.paypal.com/donate/?hosted_button_id=REPLACE_WITH_YOUR_BUTTON_ID"
+              target="_blank"
+              rel="noopener"
+              data-i18n="funding_paypal_cta"
+            >Support via PayPal</a>
           </div>
         </div>
       </section>
