--- a/site/licensing.html
+++ b/site/licensing.html
@@ -75,7 +75,7 @@
             <li data-i18n="pricing_notice_b2">✅ Commercial distribution allowed</li>
             <li data-i18n="pricing_notice_b3">✅ No licensing fees required</li>
           </ul>
-          <p style="margin-top: 1rem;"><strong>Note:</strong> Source code remains proprietary. Enterprise source code licensing available on request.</p>
+          <p style="margin-top: 1rem;"><strong>Note:</strong> Commercial model is support/SLA and services. Standard delivery is binary-first.</p>
         </div>
         <div class="card">
           <h3 data-i18n="support_policy_title">Version 2.0.0 Support Policy</h3>
@@ -145,7 +145,7 @@
                 <td data-i18n="pricing_row_license">License</td>
                 <td data-i18n="pricing_row_license_free">MIT License</td>
                 <td data-i18n="pricing_row_license_pro">MIT License</td>
-                <td data-i18n="pricing_row_license_enterprise">MIT + Source Access</td>
+                <td data-i18n="pricing_row_license_enterprise">MIT + SLA</td>
               </tr>
               <tr>
                 <td data-i18n="pricing_row_target">Target</td>
@@ -163,7 +163,7 @@
                 <td data-i18n="pricing_row_source">Source Code Access</td>
                 <td data-i18n="pricing_row_source_free">No</td>
                 <td data-i18n="pricing_row_source_pro">No</td>
-                <td data-i18n="pricing_row_source_enterprise">Yes</td>
+                <td data-i18n="pricing_row_source_enterprise">By separate agreement</td>
               </tr>
               <tr>
                 <td data-i18n="pricing_row_custom">Custom Development</td>
@@ -187,8 +187,38 @@
             <li>Modify and extend through public APIs</li>
             <li>Sell products that include ArberCharts</li>
           </ul>
-          <p style="margin-top: 1rem;"><strong>Source Code:</strong></p>
-          <p data-i18n="pricing_note_lockin_body">The source code remains proprietary. Enterprise customers can purchase source code access for custom modifications and deeper integration.</p>
+          <p style="margin-top: 1rem;"><strong>Commercial Model:</strong></p>
+          <p data-i18n="pricing_note_lockin_body">ArberCharts is monetized through support subscriptions, SLA commitments, and custom engineering services.</p>
+        </div>
+      </section>
+
+      <section class="section">
+        <div class="grid cols-2">
+          <div class="card">
+            <h3 data-i18n="funding_title">Support Development Financially</h3>
+            <p data-i18n="funding_body">
+              If you want to support ArberCharts development directly, you can make a voluntary contribution.
+            </p>
+            <p class="muted" data-i18n="funding_note">
+              Recommended for individuals. For companies, use support/SLA subscriptions.
+            </p>
+            <a
+              class="btn primary"
+              href="https://www.paypal.com/donate/?hosted_button_id=REPLACE_WITH_YOUR_BUTTON_ID"
+              target="_blank"
+              rel="noopener"
+              data-i18n="funding_paypal_cta"
+            >Support via PayPal</a>
+          </div>
+          <div class="card">
+            <h3 data-i18n="funding_business_title">For Businesses and Teams</h3>
+            <p data-i18n="funding_business_body">
+              For production use, budgeting, and procurement, we recommend professional support plans with clear SLA targets.
+            </p>
+            <div class="hero-cta">
+              <a class="btn" href="contact.html" data-i18n="funding_contact_cta">Request support plan</a>
+            </div>
+          </div>
         </div>
       </section>
 
