Configure PayPal donation links with support email

--- a/site/contact.html
+++ b/site/contact.html
@@ -91,7 +91,7 @@
           <div class="hero-cta">
             <a
               class="btn primary"
-              href="https://www.paypal.com/donate/?hosted_button_id=REPLACE_WITH_YOUR_BUTTON_ID"
+              href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=gashi%40pro-business.ch&currency_code=CHF&item_name=Support%20ArberCharts%20Development"
               target="_blank"
               rel="noopener"
               data-i18n="funding_paypal_cta"
