Redesign product, licensing, and contact funnel pages

--- a/site/contact.html
+++ b/site/contact.html
@@ -3,28 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>ArberCharts | Zero-GC High-Performance Java 25 Charting</title>
-    <meta name="title" content="ArberCharts | Zero-GC High-Performance Java 25 Charting" />
-    <meta name="description" content="The mission-critical charting engine for Java 25. 158 renderers for Medical, Financial, and Engineering. Zero-GC pipeline for smooth 60 FPS real-time data." />
-    <meta name="keywords" content="ArberCharts, Java 25 Charts, Zero-GC Rendering, Real-time Charting Java, Medical Waveforms, Financial Charting Library, Swing Charting, High Performance Data Viz" />
-    <meta name="author" content="Arber Gashi" />
-    <meta name="theme-color" content="#050505" />
-    <link rel="canonical" href="https://www.arbergashi.com/" />
-    <meta name="robots" content="index, follow" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.arbergashi.com/" />
-    <meta property="og:title" content="ArberCharts — Mission-Critical Java Visualization" />
-    <meta property="og:description" content="158 Renderers. Zero-GC Pipeline. Designed for high-stakes medical and financial systems using Java 25." />
-    <meta property="og:image" content="https://www.arbergashi.com/images/og-preview.png" />
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://www.arbergashi.com/" />
-    <meta property="twitter:title" content="ArberCharts — Zero-GC Java Charting" />
-    <meta property="twitter:description" content="Stop-the-world GC is the enemy. ArberCharts is the solution. High-performance rendering for modern JDKs." />
-    <meta property="twitter:image" content="https://www.arbergashi.com/images/og-preview.png" />
+    <title>ArberCharts 2.0 | Contact</title>
+    <meta
+      name="description"
+      content="Contact ArberCharts for support plans, SLA options, integration rollout, and direct roadmap funding via PayPal."
+    />
     <link rel="icon" href="favicon.ico" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -59,44 +43,73 @@
     </header>
 
     <div class="mobile-backdrop" aria-hidden="true"></div>
+
     <main class="container">
-      <section class="hero">
-        <h1 data-i18n="contact_title">Kontakt</h1>
-        <p data-i18n="contact_subtitle">Lizenzierung, Evaluation oder technische Fragen.</p>
+      <section class="hero funnel-hero">
+        <p class="rev-pill">Contact & Commercial Onboarding</p>
+        <h1>Ship ArberCharts 2.0 with direct engineering support</h1>
+        <p>
+          For licensing, rollout planning, and production support,
+          contact us directly. You reach engineering without ticket routing.
+        </p>
+        <div class="hero-cta">
+          <a class="btn primary" href="mailto:gashi@pro-business.ch">Email engineering</a>
+          <a class="btn" href="licensing.html">View licensing model</a>
+        </div>
       </section>
 
       <section class="section">
         <div class="grid cols-2">
           <div class="card">
             <img class="contact-avatar" src="images/arber.jpg" alt="Arber Gashi" />
-            <h3 data-i18n="contact_direct_title">Direktkontakt</h3>
+            <h3 data-i18n="contact_direct_title">Direct Contact</h3>
             <p data-i18n="contact_direct_body">Arber Gashi · Chief Software Architect</p>
-            <p>gashi@pro-business.ch</p>
-            <p data-i18n="contact_location">Schweiz</p>
+            <p><a href="mailto:gashi@pro-business.ch">gashi@pro-business.ch</a></p>
+            <p data-i18n="contact_location">Switzerland</p>
           </div>
           <div class="card">
-            <h3 data-i18n="contact_request_title">Anfrage</h3>
-            <p data-i18n="contact_request_body">Schick uns eine kurze Beschreibung deines Use-Cases und der geplanten Distribution.</p>
-            <a class="btn" href="mailto:gashi@pro-business.ch" data-i18n="contact_email_cta">E-Mail senden</a>
+            <h3>Commercial Inquiry Checklist</h3>
+            <ul class="stack-list">
+              <li>Expected renderer domains (medical, financial, analytics)</li>
+              <li>Runtime target (desktop/server) and Java baseline</li>
+              <li>Distribution model and support expectations</li>
+            </ul>
+            <div class="hero-cta">
+              <a class="btn" href="mailto:gashi@pro-business.ch" data-i18n="contact_email_cta">Send inquiry</a>
+            </div>
           </div>
         </div>
       </section>
 
       <section class="section">
-        <div class="card">
-          <h3 data-i18n="funding_contact_title">Support the Roadmap</h3>
-          <p data-i18n="funding_contact_body">
-            You can support ongoing development directly via PayPal, or choose a professional support package for business-critical deployments.
-          </p>
-          <div class="hero-cta">
-            <a
-              class="btn primary"
-              href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=gashi%40pro-business.ch&currency_code=CHF&item_name=Support%20ArberCharts%20Development"
-              target="_blank"
-              rel="noopener"
-              data-i18n="funding_paypal_cta"
-            >Support via PayPal</a>
-            <a class="btn" href="mailto:gashi@pro-business.ch" data-i18n="funding_contact_cta">Request support plan</a>
+        <div class="grid cols-2">
+          <div class="card">
+            <h3 data-i18n="funding_contact_title">Support the Roadmap</h3>
+            <p data-i18n="funding_contact_body">
+              You can support ongoing development directly via PayPal,
+              or choose a professional support package for business-critical deployments.
+            </p>
+            <div class="hero-cta">
+              <a
+                class="btn primary"
+                href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=gashi%40pro-business.ch&currency_code=CHF&item_name=Support%20ArberCharts%20Development"
+                target="_blank"
+                rel="noopener"
+                data-i18n="funding_paypal_cta"
+              >
+                Support via PayPal
+              </a>
+            </div>
+          </div>
+          <div class="card">
+            <h3>Support Plans</h3>
+            <p>
+              For teams in production, we provide professional and enterprise
+              support plans with clear SLA targets and optional implementation help.
+            </p>
+            <div class="hero-cta">
+              <a class="btn" href="licensing.html" data-i18n="funding_contact_cta">Request support plan</a>
+            </div>
           </div>
         </div>
       </section>
@@ -104,30 +117,18 @@
       <section class="section" id="gallery">
         <div class="section-title">
           <span data-i18n="gallery_kicker">Gallery</span>
-          <h2 data-i18n="gallery_title">Produkt-Impressionen</h2>
+          <h2 data-i18n="gallery_title">Product Impressions</h2>
         </div>
-        <div class="gallery-grid">
-          <div class="gallery-item">
-            <img src="images/sankey.png" alt="Sankey" />
-            <span data-i18n="gallery_flow">Flow analytics</span>
-          </div>
-          <div class="gallery-item">
-            <img src="images/ventilator.png" alt="Ventilator" />
-            <span data-i18n="gallery_medical">Medical monitoring</span>
-          </div>
-          <div class="gallery-item">
-            <img src="images/radarchart.png" alt="Radar chart" />
-            <span data-i18n="gallery_multivariate">Multivariate analysis</span>
-          </div>
-          <div class="gallery-item">
-            <img src="images/vektorfield.png" alt="Vector field" />
-            <span data-i18n="gallery_analysis">Signal analysis</span>
-          </div>
+        <div class="gallery-grid shot-grid">
+          <div class="gallery-item"><img src="images/sankey.png" alt="Sankey" /><span data-i18n="gallery_flow">Flow analytics</span></div>
+          <div class="gallery-item"><img src="images/ventilator.png" alt="Ventilator" /><span data-i18n="gallery_medical">Medical monitoring</span></div>
+          <div class="gallery-item"><img src="images/radarchart.png" alt="Radar chart" /><span data-i18n="gallery_multivariate">Multivariate analysis</span></div>
+          <div class="gallery-item"><img src="images/vektorfield.png" alt="Vector field" /><span data-i18n="gallery_analysis">Signal analysis</span></div>
         </div>
       </section>
     </main>
 
-                <footer class="ac-footer">
+    <footer class="ac-footer">
       <div class="ac-container">
         <div class="ac-brand">
           <h2 class="ac-logo">ARBER<span>CHARTS</span></h2>
@@ -161,7 +162,7 @@
       <div class="ac-bottom">
         <div class="ac-container ac-bottom-flex">
           <p data-i18n="footer_rights">© 2024-2026 Arber Gashi. All rights reserved.</p>
-          <p class="ac-status" data-i18n="footer_license">MIT License for binaries. Source code proprietary.</p>
+          <p class="ac-status" data-i18n="footer_license">MIT artifacts. Closed-source end products allowed. Commercial via support/SLA.</p>
         </div>
       </div>
     </footer>
