Run site-wide QA and fix links, assets, and licensing copy

--- a/site/demo.html
+++ b/site/demo.html
@@ -148,15 +148,15 @@
         <p class="section-note" data-i18n="demo_gallery_body">Selected showcase views (available on request).</p>
         <div class="media-grid">
           <figure class="media-card">
-            <img src="images/demo-financial.png" alt="Financial demo panel" />
+            <img src="images/candlestick.png" alt="Financial demo panel" />
             <figcaption data-i18n="demo_gallery_financial">Financial indicators and overlays.</figcaption>
           </figure>
           <figure class="media-card">
-            <img src="images/demo-medical.png" alt="Medical demo panel" />
+            <img src="images/medicalsweep.png" alt="Medical demo panel" />
             <figcaption data-i18n="demo_gallery_medical">Medical waveforms with precise grids.</figcaption>
           </figure>
           <figure class="media-card">
-            <img src="images/demo-specialized.png" alt="Specialized demo panel" />
+            <img src="images/sankey.png" alt="Specialized demo panel" />
             <figcaption data-i18n="demo_gallery_specialized">Specialized renderers for advanced analytics.</figcaption>
           </figure>
         </div>
@@ -178,7 +178,7 @@
     <footer class="footer">
       <div class="container">
         <p>© 2024-2026 Arber Gashi. All rights reserved.</p>
-        <p data-i18n="footer_note">MIT license for binary artifacts. Source code proprietary.</p>
+        <p data-i18n="footer_note">MIT artifacts. Closed-source end products allowed. Commercial via support/SLA.</p>
       </div>
     </footer>
 
