--- a/site/index.html
+++ b/site/index.html
@@ -235,7 +235,7 @@
       <div class="ac-bottom">
         <div class="ac-container ac-bottom-flex">
           <p data-i18n="footer_rights">© 2024-2026 Arber Gashi. All rights reserved.</p>
-          <p class="ac-status" data-i18n="footer_license">MIT License for binaries. Source code proprietary.</p>
+          <p class="ac-status" data-i18n="footer_license">MIT artifacts. Closed-source end products allowed. Commercial via support/SLA.</p>
         </div>
       </div>
     </footer>
