--- a/site/licensing.html
+++ b/site/licensing.html
@@ -55,7 +55,7 @@
         </p>
         <div class="hero-cta">
           <a class="btn primary" href="contact.html">Request support plan</a>
-          <a class="btn" href="/docs/SLA.md">Read SLA</a>
+          <a class="btn" href="docs/SLA.md">Read SLA</a>
         </div>
       </section>
 
