Remove visual verifier module and purge project references

--- a/site/index.html
+++ b/site/index.html
@@ -78,8 +78,8 @@
           <p>Stable frame behavior under load for long-running, high-frequency visual workloads.</p>
         </article>
         <article class="rev-proof">
-          <h3>Verifier + Demo Delivery</h3>
-          <p>Visual Verifier and demo artifacts for pre-sales, QA reviews, and customer acceptance.</p>
+          <h3>Demo Delivery</h3>
+          <p>Demo artifacts for pre-sales, QA reviews, and customer acceptance.</p>
         </article>
         <article class="rev-proof">
           <h3>Support-First Commercial Model</h3>
@@ -171,7 +171,7 @@
             <h3>For sales and product teams</h3>
             <ul class="card-list">
               <li>Demo artifact for stakeholder walkthroughs.</li>
-              <li>Visual Verifier catalog for confidence in renderer coverage.</li>
+              <li>Renderer catalog confidence through the maintained demo line.</li>
               <li>Single story: ArberCharts 2.0 is the supported line.</li>
             </ul>
           </div>
@@ -191,7 +191,7 @@
           <h3>Plan your customer rollout with ArberCharts 2.0</h3>
           <p>
             If the target is broad market adoption, the fastest path is a polished demo flow,
-            verified renderer coverage, and commercial support from day one.
+            renderer coverage, and commercial support from day one.
           </p>
           <div class="hero-cta">
             <a class="btn primary" href="products.html">Get release artifacts</a>
