--- a/site/products.html
+++ b/site/products.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>ArberCharts 2.0 | Product</title>
-    <meta name="description" content="ArberCharts 2.0 product line: 158 renderers, Java 25 baseline, zero-GC rendering, and deployment-ready artifacts." />
+    <meta name="description" content="ArberCharts 2.0 product line: 157 renderers, Java 25 baseline, zero-GC rendering, and deployment-ready artifacts." />
     <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -47,7 +47,7 @@
         <h1>One product line. No version drift.</h1>
         <p>
           ArberCharts 2.0 is the only maintained delivery line: Java 25 baseline,
-          158 production renderers, zero-GC rendering, and deployment-ready artifacts
+          157 production renderers, zero-GC rendering, and deployment-ready artifacts
           for teams shipping to real customers.
         </p>
         <div class="hero-cta">
@@ -83,13 +83,13 @@
             </ul>
           </article>
           <article class="plan-card">
-            <img class="card-media" src="images/heatmap.png" alt="Verifier and QA" />
-            <h3>Visual Verifier</h3>
-            <p>Internal quality surface for renderer previews, compatibility checks, and visual regression workflows.</p>
+            <img class="card-media" src="images/heatmap.png" alt="Quality and QA" />
+            <h3>Quality Workflow</h3>
+            <p>Single-path validation with the maintained demo line and deterministic renderer datasets.</p>
             <ul class="stack-list">
-              <li>Renderer compatibility filtering</li>
-              <li>Robust fallback diagnostics</li>
-              <li>Benchmark-oriented workflows</li>
+              <li>Renderer coverage walkthrough</li>
+              <li>Deterministic demo outputs</li>
+              <li>Release-ready artifact packaging</li>
             </ul>
           </article>
         </div>
