--- a/site/products/release-2.0.0.html
+++ b/site/products/release-2.0.0.html
@@ -51,7 +51,7 @@
           <ul>
             <li><strong>Swing Bridge</strong> - Exzellente Desktop-Integration mit FlatLaf</li>
             <li><strong>Spring Boot Starter</strong> - Server-seitige Chart-Generierung</li>
-            <li><strong>Visual Verifier</strong> - Web-basierte Renderer-Galerie</li>
+            <li><strong>Demo Application</strong> - Lieferfähige Renderer-Galerie</li>
           </ul>
         </div>
 
@@ -80,7 +80,6 @@
               <tr><td>arbercharts-server-bridge</td><td>✅ v2.0.0</td></tr>
               <tr><td>arbercharts-spring-boot-starter</td><td>✅ v2.0.0</td></tr>
               <tr><td>arbercharts-swing-bridge</td><td>✅ v2.0.0</td></tr>
-              <tr><td>arbercharts-visual-verifier</td><td>✅ v2.0.0</td></tr>
               <tr><td>arbercharts-demo</td><td>✅ v2.0.0</td></tr>
             </tbody>
           </table>
